--- a/visualization/style/map.css
+++ b/visualization/style/map.css
@@ -95,7 +95,8 @@ li.dropdown {
         color: white;
       }
 
-#textArea {
+#wordFD {
+  color:white;
   opacity: 0.9;
   display: none;
   background-color: #333;
@@ -104,17 +105,5 @@ li.dropdown {
         padding: 5px;
         position: absolute;
         top: 120px;
-        z-index: 6;
-}
-
-#textArea2 {
-  opacity: 0.9;
-  display: none;
-  background-color: #333;
-        border: 1px solid #999;
-        left: 0.5%;
-        padding: 5px;
-        position: absolute;
-        top: 420px;
         z-index: 6;
 }
