--- a/visualization/style/map.css
+++ b/visualization/style/map.css
@@ -99,7 +99,7 @@ li.dropdown {
   color:white;
   opacity: 0.9;
   display: none;
-  background-color: #333;
+  background-color: white;
         border: 1px solid #999;
         left: 0.5%;
         padding: 5px;
