--- a/visualization/style/map.css
+++ b/visualization/style/map.css
@@ -6,65 +6,22 @@ html, body {
   margin-top: 0;
   }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
+nav ul ul {
+   font: 0/0 serif;   /* Unternavigation ausblenden */
+   z-index: -1;
 }
+ 
+nav ul li:hover ul {
+   font: inherit;     /*  Unternavigation einblenden */
+   z-index: auto;   
+  }
 
-li {
-    float: left;
-}
 
-li a, .dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
-}
-
-li.dropdown {
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-#dropdown-bar {
-  z-index: 100;
-  position: relative;
-}
-
-      #map {
-        height: 92%;
-        z-index: 2;
-      }
+#map {
+  height: 92%;
+  z-index: 2;
+  }
+  
 #floating-panel {
   position: absolute;
   top: 10px;
@@ -79,21 +36,21 @@ li.dropdown {
   padding-left: 10px;
 }
 
-      #floating-panel {
-        background-color: #333;
-        border: 1px solid #999;
-        left: 89%;
-        right: 0.5%;
-        padding: 5px;
-        position: absolute;
-        top: 90px;
-        z-index: 5;
-      }
+#floating-panel {
+  background-color: #333;
+  border: 1px solid #999;
+  left: 89%;
+  right: 0.5%;
+  padding: 5px;
+  position: absolute;
+  top: 90px;
+  z-index: 5;
+}
 
-      button {
-        background-color: #111;
-        color: white;
-      }
+button {
+  background-color: #111;
+  color: white;
+}
 
 #wordFD {
   color:white;
