--- a/visualization/style/map.css
+++ b/visualization/style/map.css
@@ -1,27 +1,99 @@
 
-html, body {
-  height: 100%;
+body {
+  width: 100%;
+  margin:auto;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+header {
+  flex: 100%;
+  flex-basis: auto;
+}
+
+header h1 {
+  text-align: center;
+  font: 
+}
+
+.flex-container {
+  width: 100%;
+  margin:auto;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+#beschreibung {
+  flex:1 20%;
+}
+
+#map {
+  flex: 3;
+  border: 3px solid black;
+}
+
+
+ 
+nav {
+  height: 2em;
+  padding: 0.8em;
+  background-color: black;
+  border: 1px solid black;
+}
+
+nav a, nav span {
+  background-color: blue;
+  padding: 0.4em;
+  display: block;
+  width: 8em;
+}
+
+nav ul {
   margin: 0;
   padding: 0;
-  margin-top: 0;
-  }
+  text-align: center;
+}
+nav li {
+  float: left;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  display: inline-block;
+}
 
 nav ul ul {
-   font: 0/0 serif;   /* Unternavigation ausblenden */
-   z-index: -1;
+  margin: 0; 
+  padding: 0;
+  position: absolute;
+  top: 2.2em; 
+  font: 0/0 serif;/* Unternavigation ausblenden */
+  z-index: -1;
+}
+
+nav ul ul li {
+  float: none;
 }
  
 nav ul li:hover ul {
-   font: inherit;     /*  Unternavigation einblenden */
-   z-index: auto;   
-  }
+  font: inherit;
+  z-index: auto;   /*  Unternavigation einblenden */
+}
 
-
+/*
 #map {
-  height: 92%;
-  z-index: 2;
-  }
-  
+  flex: 100%;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  }*/
+
 #floating-panel {
   position: absolute;
   top: 10px;
