--- a/visualization/style/map.css
+++ b/visualization/style/map.css
@@ -1,55 +1,85 @@
+@font-face { font-family: grobeDeutschmeister; src: url(GrobeDeutschmeister.ttf); }
+
+html, body {
+  width: 100vw;
+  height: 100vh;
+}
 
 body {
-  width: 100%;
-  margin:auto;
-  min-height: 100vh;
+  margin:0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
 header {
-  flex: 100%;
-  flex-basis: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 10%;
+  padding: 0.2em;
+  background-color: #1E2426;
+  text-align: center;
+  font-family: grobeDeutschmeister;
+  font-size: 40px;
+  color: red;
 }
 
-header h1 {
-  text-align: center;
-  font: 
+header div {
+  margin: auto;
+}
+
+#untertitel {
+  font-size: 20px;
 }
 
 .flex-container {
+  flex: 80%;
   width: 100%;
   margin:auto;
-  min-height: 100vh;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
 }
 
 #beschreibung {
-  flex:1 20%;
+  flex:1 30%;
 }
 
 #map {
-  flex: 3;
+  position: relative;
+  flex: 3 50%;
   border: 3px solid black;
 }
 
-
+#floating-panel {
+  position: absolute;
+  display: inline-block;
+  background-color: #333;
+  padding: 5px;
+  border: 1px solid #999;
+  text-align: center;
+  font-family: 'Roboto','sans-serif';
+  height: 30px;
+  width: 60px;
+  top: 10px;
+  padding-left: 10px;
+}
  
 nav {
-  height: 2em;
-  padding: 0.8em;
-  background-color: black;
-  border: 1px solid black;
+  flex: 2%;
+  padding: 0.5em;
+  background-color: #FF0000;
 }
 
 nav a, nav span {
-  background-color: blue;
-  padding: 0.4em;
+  font-family: 'Courier New';
+  font-size: 1.5em;
+  color: black;
   display: block;
-  width: 8em;
+  width: 10em;
+  text-decoration: none;
 }
 
 nav ul {
@@ -59,24 +89,23 @@ nav ul {
 }
 nav li {
   float: left;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+  padding: 0.1em;
   position: relative;
   display: inline-block;
+  border: 1px solid black;
 }
 
 nav ul ul {
   margin: 0; 
   padding: 0;
   position: absolute;
-  top: 2.2em; 
   font: 0/0 serif;/* Unternavigation ausblenden */
   z-index: -1;
 }
 
 nav ul ul li {
-  float: none;
+  background-color: #FF0000;
+  margin-top: 0.5em;
 }
  
 nav ul li:hover ul {
@@ -94,31 +123,6 @@ nav ul li:hover ul {
   bottom: 0;
   }*/
 
-#floating-panel {
-  position: absolute;
-  top: 10px;
-  left: 25%;
-  z-index: 5;
-  background-color: #333;
-  padding: 5px;
-  border: 1px solid #999;
-  text-align: center;
-  font-family: 'Roboto','sans-serif';
-  line-height: 30px;
-  padding-left: 10px;
-}
-
-#floating-panel {
-  background-color: #333;
-  border: 1px solid #999;
-  left: 89%;
-  right: 0.5%;
-  padding: 5px;
-  position: absolute;
-  top: 90px;
-  z-index: 5;
-}
-
 button {
   background-color: #111;
   color: white;
@@ -135,4 +139,36 @@ button {
         position: absolute;
         top: 120px;
         z-index: 6;
+}
+
+/*Burger Menu Test*/
+
+.hamburger{
+  float: left;
+  height: 5em;
+  cursor:pointer;
+  outline:none;
+  z-index:10000000000000;
+}
+.cross{
+  float: left;
+  height: 5em;
+  cursor:pointer;
+  outline:none;
+  z-index:10000000000000;
+}
+.menu{z-index:1000000; font-weight:bold; font-size:0.8em; width:100%; background:#131313;  position:absolute; text-align:center;}
+.menu ul {margin: 0; padding: 0; list-style-type: none; list-style-image: none;}
+.menu li {display: block;   padding:15px 0 15px 0; border-bottom:#1d1f20 1px solid;}
+.menu li:hover{display: block;    background:#181818; padding:15px 0 15px 0; border-bottom:#1d1f20 1px solid;}
+.menu ul li a { text-decoration:none;  margin: 0px; color:#fff;}
+.menu ul li a:hover {  color: #fff; text-decoration:none;}
+.menu a{text-decoration:none; color:white;}
+.menu a:hover{text-decoration:none; color:white;}
+
+.glyphicon-home{
+  color:white; 
+  font-size:1.5em; 
+  margin-top:5px; 
+  margin:0 auto;
 }
