header and menu in shape, map over whole screen.

--- a/visualization/style/map.css
+++ b/visualization/style/map.css
@@ -157,14 +157,14 @@ button {
   outline:none;
   z-index:10000000000000;
 }
-.menu{z-index:1000000; font-weight:bold; font-size:0.8em; width:100%; background:#131313;  position:absolute; text-align:center;}
+.menu{z-index:1000000; font-weight:bold; font-size:1.5em; width:20%; background:#1E2426; border-top: white 1px solid; position:absolute; text-align:center;}
 .menu ul {margin: 0; padding: 0; list-style-type: none; list-style-image: none;}
 .menu li {display: block;   padding:15px 0 15px 0; border-bottom:#1d1f20 1px solid;}
 .menu li:hover{display: block;    background:#181818; padding:15px 0 15px 0; border-bottom:#1d1f20 1px solid;}
 .menu ul li a { text-decoration:none;  margin: 0px; color:#fff;}
 .menu ul li a:hover {  color: #fff; text-decoration:none;}
 .menu a{text-decoration:none; color:white;}
-.menu a:hover{text-decoration:none; color:white;}
+.menu a:hover{text-decoration:none; color:red;}
 
 .glyphicon-home{
   color:white; 
